# libcoap-cpp

./: CMakeLists.txt  README.en.md  README.md  config.h.in
cmake/: install_include_dir.cmake
doc/: Doxyfile.in  coap.drawio  精简版.md
examples/: CMakeLists.txt  HandlingExample.h  ResourceInterfaceExample.h  client.cc  server.cc
include/coap/: BlockTransferReader.h  Context.h  ContextClient.h  ContextServer.h  EndPoint.h  EventHandling.h  Handling.h  Log.h  Resource.h  ResourceInterface.h  ResourceManager.h  SendersManager.h  Session.h  exception.h
include/coap/DataStruct/: Address.h  Binary.h  BinaryConst.h  BinaryConstView.h  BinaryView.h
include/coap/Information/: GeneralInformation.h  OptionInformation.h  PduInformation.h
include/coap/Pdu/: Decoder.h  Encoder.h  OptFilter.h  Option.h  Options.h  Payload.h  Pdu.h  RequestPdu.h  ResponsePdu.h
src/: CMakeLists.txt  Context.cc  Context.h  ContextClient.cc  ContextClient.h  ContextServer.cc  ContextServer.h  DefaultHandling.cc  DefaultHandling.h  EndPoint.cc  EndPoint.h  EventHandling.cc  EventHandling.h  Handling.cc  Handling.h  Resource.cc  Resource.h  ResourceInterface.cc  ResourceInterface.h  ResourceManager.cc  ResourceManager.h  SendersManager.cc  SendersManager.h  SendersManagerHandlerWrapper.cc  SendersManagerHandlerWrapper.h  Session.cc  Session.h
src/DataStruct/: Address.cc  Address.h  AddressWrapper.h  Binary.cc  Binary.h  BinaryConst.cc  BinaryConst.h  BinaryConstView.cc  BinaryConstView.h  BinaryView.cc  BinaryView.h
src/Information/: GeneralInformation.h  OptionInformation.h  PduInformation.h
src/Pdu/: Decoder.cc  Decoder.h  Encoder.cc  Encoder.h  OptFilter.cc  OptFilter.h  Option.cc  Option.h  Options.cc  Options.h  Payload.h  Pdu.cc  Pdu.h  RequestPdu.cc  RequestPdu.h  ResponsePdu.cc  ResponsePdu.h
src/utils/: BlockTransferReader.cc  BlockTransferReader.h  CoapException.h  Log.cc  Log.h
tests/: CMakeLists.txt
tests/Communication/: CMakeLists.txt  TestEventHandling.cc  TestEventHandling.h  tst_Communication.cc
tests/DataStruct/: CMakeLists.txt  tst_DataStruct.cc
tests/Log/: CMakeLists.txt  tst_Log.cc
tests/Pdu/: CMakeLists.txt  tst_Pdu.cc
tests/ServerResource/: CMakeLists.txt  tst_ServerResource.cc
tests/ServerResource/ResourceInterface/: CMakeLists.txt  TestResourceInterface.h  tst_ResourceInterface.cc
tests/Session/: CMakeLists.txt  tst_Session.cc
tests/Session/SendersManager/: CMakeLists.txt  TestHandling.h  tst_SendersManager.cc
